2011-07-15  Daniel Dressler <danieru.dressler@gmail.com>
	* printer/HP-LaserJet_3390.xml default driver was not present
	  in list of drivers

2011-07-13  Till Kamppeter <till.kamppeter@gmail.com>

	* Makefile.in: Install also the xmlschema/ directory, so that
	  the foomatic-verify-xml utility also works in an installed system.

	* driver/lxm3200.xml: Fixed printer list entry, found problem
	  with the new foomatic-verify-xml utility.

2011-07-07  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/PJL-Duplex.xml: Fixed default setting of the "PJL-Duplex"
	  option. Thanks to Daniel Dressler to find this.

2011-07-03  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-6500e.xml, printer/Lexmark-C950.xml,
	  printer/Lexmark-X548.xml, printer/Lexmark-X950.xml,
	  printer/Lexmark-X952.xml, printer/Lexmark-X954.xml: Added
	  XML entries for the new PPD files from Lexmark.

	* printer/Dell-3000cn.xml, driver/pxlcolor.xml,
	  opt/pxlmono-PrinterResolution.xml: Added new printer Dell 3000cn.
	  working with the "pxlcolor" driver. Thanks to Albert Pool
	  (albertpool at solcon dot nl).

2011-06-30  Lovely Kim Salvo-Nunez <lsalvo@lexmark.com>

        * PPD/Lexmark/Lexmark_6500e_Series.ppd,
	  PPD/Lexmark/Lexmark_C950_Series.ppd,
	  PPD/Lexmark/Lexmark_X950_Series.ppd,
	  PPD/Lexmark/Lexmark_X548_Series.ppd: Uploaded Lexmark PPD Files

2011-06-28  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript.xml, driver/hplip.xml, driver/laserjet.xml,
	  driver/lj4dith.xml, driver/lj5gray.xml, driver/ljet4.xml,
	  driver/ljet4d.xml, driver/ptouch.xml, driver/pxlmono.xml,
	  printer/Apple-LaserWriter_IINTX.xml,
	  printer/Apple-LaserWriter_NT.xml, printer/Canon-S330_Photo.xml,
	  printer/Epson-EM_900CN.xml, printer/Epson-EM_930CN.xml,
	  printer/Epson-PM_820C.xml, printer/Epson-Stylus_Photo_1290.xml,
	  printer/Epson-Stylus_Photo_1290S.xml, printer/Infotec-4651_MF.xml,
	  printer/Oki-B2200.xml, printer/Ricoh-Aficio_AP2000.xml: Many printers