@@ -421,9 +421,6 @@
       <id>printer/HP-Color_LaserJet_8550</id>
     </printer>
     <printer>
-      <id>printer/HP-Color_LaserJet_8550GN</id>
-    </printer>
-    <printer>
       <id>printer/HP-Color_LaserJet_9500</id>
     </printer>
     <printer>
@@ -1760,7 +1757,7 @@ The printer's memory can also be upgraded up to 144MB. This is also a DIMM modul
       <id>printer/Xerox-DocuPrint_N17</id>
     </printer>
     <printer>
-      <id>printer/Xerox-DocuPrint_N2125PS</id>
+      <id>printer/Xerox-DocuPrint_N2125</id>
     </printer>
     <printer>
       <id>printer/Xerox-DocuPrint_N24</id>
@@ -1769,19 +1766,19 @@ The printer's memory can also be upgraded up to 144MB. This is also a DIMM modul
       <id>printer/Xerox-DocuPrint_N32</id>
     </printer>
     <printer>
-      <id>printer/Xerox-DocuPrint_N3225PS</id>
+      <id>printer/Xerox-DocuPrint_N3225</id>
     </printer>
     <printer>
       <id>printer/Xerox-DocuPrint_N40</id>
     </printer>
     <printer>
-      <id>printer/Xerox-DocuPrint_N4025PS</id>
+      <id>printer/Xerox-DocuPrint_N4025</id>
     </printer>
     <printer>
       <id>printer/Xerox-DocuPrint_N4512PS</id>
     </printer>
     <printer>
-      <id>printer/Xerox-DocuPrint_N4525PS</id>
+      <id>printer/Xerox-DocuPrint_N4525</id>
     </printer>
     <printer>
       <id>printer/Xerox-FaxCenter_2121</id>
@@ -1868,7 +1865,7 @@ The printer's memory can also be upgraded up to 144MB. This is also a DIMM modul
       <id>printer/Xerox-Phaser_6100</id>
     </printer>
     <printer>
-      <id>printer/Xerox-Phaser_6120PS</id>
+      <id>printer/Xerox-Phaser_6120</id>
     </printer>
     <printer>
       <id>printer/Xerox-Phaser_6130</id>
