@@ -514,9 +514,6 @@ HP2100M worked fine (i.e. no need to compile IEEE1284 into your kernel).</en>
       <id>printer/Oki-B2400</id>
     </printer>
     <printer>
-      <id>printer/Oki-B2400n</id>
-    </printer>
-    <printer>
       <id>printer/Oki-B4200</id>
     </printer>
     <printer>
@@ -532,16 +529,10 @@ HP2100M worked fine (i.e. no need to compile IEEE1284 into your kernel).</en>
       <id>printer/Oki-B4400</id>
     </printer>
     <printer>
-      <id>printer/Oki-B4400n</id>
-    </printer>
-    <printer>
       <id>printer/Oki-B4600</id>
     </printer>
     <printer>
-      <id>printer/Oki-B4600n</id>
-    </printer>
-    <printer>
-      <id>printer/Oki-B4600n_PS</id>
+      <id>printer/Oki-B4600_PS</id>
     </printer>
     <printer>
       <id>printer/Oki-Okipage_10ex</id>
