@@ -1807,7 +1807,7 @@
           <printer>printer/HP-Color_LaserJet_4600</printer>
         </constraint>
         <constraint sense="false">
-          <printer>printer/HP-Color_LaserJet_8550GN</printer>
+          <printer>printer/HP-Color_LaserJet_8550</printer>
         </constraint>
         <constraint sense="false">
           <printer>printer/HP-DesignJet_3500CP</printer>
