@@ -356,7 +356,7 @@
           <printer>printer/HP-Color_LaserJet_5M</printer>
         </constraint>
         <constraint sense="false">
-          <printer>printer/HP-Color_LaserJet_8550GN</printer>
+          <printer>printer/HP-Color_LaserJet_8550</printer>
         </constraint>
         <constraint sense="false">
           <printer>printer/HP-DesignJet_2500CP</printer>
