@@ -1,4 +1,12 @@
+2011-07-19  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/Postscript.xml, driver/pxlmono.xml, opt/6.xml,
+	  opt/Postscript-Resolution.xml, opt/Postscript1-Resolution.xml:
+	  After renaming some printers, some of the references to them
+	  in the driver and option entries did not get renamed.
+
 2011-07-15  Daniel Dressler <danieru.dressler@gmail.com>
+
 	* printer/HP-LaserJet_3390.xml default driver was not present
 	  in list of drivers
 
